testsuite/poke.pkl/raise-diag-1.pkl
/* { dg-do compile } */

defun foo = void:
  {
   raise "foo"; /* { dg-error "" } */
  }
